Fix navigation issues in all settings panels
AKA we give users another way to return to the main settings dialog from a submenu by clicking on the title (+2 squashed commits)
Squashed commits:
[0868d10] Make dataset renaming, location, and visibility controls function properly
[6be7d4e] Set up basic infrastructure for file upload / link validation

--- a/app/resonant-laboratory/stylesheets/mainPage.scss
+++ b/app/resonant-laboratory/stylesheets/mainPage.scss
@@ -28,7 +28,7 @@ button, input[type="file"]:after, h2 {
 button {
   font-size: 0.75em;
 }
-input:invalid {
+input.invalid {
   color: $errorNotificationColor;
   background-color: $errorNotificationBackgroundColor;
 }
