--- a/app/resonant-laboratory/views/overlays/DatasetLibrary/style.scss
+++ b/app/resonant-laboratory/views/overlays/DatasetLibrary/style.scss
@@ -16,20 +16,11 @@ h3 {
 #Overlay .newDatasetSection details > div > * {
   margin: 0.5em;
 }
-#Overlay .newDatasetSection ul {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: auto;
-  list-style-position: inside;
-  padding: 0em;
-}
-#Overlay .newDatasetSection li {
-  padding: 0em 0.5em;
-}
 #Overlay .newDatasetSection img {
   width: 1.5em;
   height: 1.5em;
-  -webkit-filter: imgColorFilter($defaultDarkIconColor);
-  filter: imgColorFilter($defaultDarkIconColor);
+}
+
+#Overlay .errorText {
+  color: $errorNotificationColor;
 }
