--- a/app/resonant-laboratory/views/overlays/DatasetSettings/style.scss
+++ b/app/resonant-laboratory/views/overlays/DatasetSettings/style.scss
@@ -10,6 +10,10 @@
 #Overlay #datasetSettings > div > * {
   margin: 0.5em;
 }
+#Overlay #datasetSettingsSpinner {
+  width: 1.5em;
+  height: 1.5em;
+}
 #Overlay #datasetSettings img {
   width: 1.5em;
   height: 1.5em;
