--- a/app/resonant-laboratory/views/overlays/SettingsPanel/style.scss
+++ b/app/resonant-laboratory/views/overlays/SettingsPanel/style.scss
@@ -16,6 +16,9 @@
   flex-grow: 2;
 }
 
+#Overlay #leftChunk h1 {
+  cursor: pointer;
+}
 #Overlay #leftChunk .menuItem {
   cursor: pointer;
   padding: 0.5em 0em 0.5em 1em;
